修改一些不太正确的表达

--- a/A 知识点总结/计网.md
+++ b/A 知识点总结/计网.md
@@ -450,8 +450,8 @@ DNS 劫持：攻击的方式之一是 黑客攻击了计算机的路由器，将
 ARP 协议：使用 IP 地址到 MAC 地址的映射
 
 这里讲下交换机和路由器：
-同个网段的不同主机连接的是交换机（不一定是同一台，可能是不同的交换机，不过这些交换机之间互相连接），通过交换机来进行通信，而交换机是二层网络，只识别 MAC 地址。
-由于交换机连接的是同个网段的主机，所以不同网段的主机间的通信不能只同个交换机，需要转发给网关进行路由，找到目的主机所在的网段，然后交给该网段的交换机，转发给目的主机。即交换机是用来通信，路由器是用来寻路的。
+同个网段的不同主机连接的是交换机（不一定是同一台，可能是不同的交换机，不过这些交换机之间互相连接），通过交换机来进行通信，而交换机是二层网络（数据链路层），只识别 MAC 地址。
+由于交换机连接的是同个网段的主机，所以不同网段的主机间的通信不能通过交换机，需要转发给网关进行路由，找到目的主机所在的网段，然后交给该网段的交换机，转发给目的主机。即交换机是用来通信，路由器是用来寻路的。
 路由器（网关）本身存在多个接口，连接了多个网段，因此可以说路由器是多个网段的，可以跟不同网段的主机进行通信
 
 我们需要记住，在路由转发的过程中，会改变的只有目的 MAC、源 MAC，而 源 IP 和 目的 IP 是不会发生改变的，比如主机 A 和 主机 B 路径上存在 3 个路由器，路由器1、路由器2、路由器3，那么在路由转发的过程中，路由器1 将消息路由转发给路由器2 时，数据链路层的消息如下：源 IP（主机 A）、目的 IP（主机 B）、源 MAC（路由器1）、目的 MAC（路由器2），后面的传输也是如此
@@ -523,7 +523,6 @@ ICMP 报文跟 TCP、UDP 一样，都是被 IP 报文进行封装，不过所处
 
 ## 8、浏览器访问 url 的整个过程
 
-```
 url 的大致过程：
 1）输入 url
 2）判断缓存
@@ -535,57 +534,165 @@ url 的大致过程：
 8）html 解析、渲染，如果是 HTTP 1.1，那么需要再发起请求获取 css、js、图片等资源，如果 HTTP 2.0，那么服务器会进行推送
 
 
-1、浏览器输入 www.baidu.com
 
-2、判断缓存
-获取浏览器缓存，判断是否有 URL 请求的资源
-如果存在，那么根据 expires 和 cache-control 判断缓存是否过期，如果没过期，那么继续使用，如果已经过期，那么需要向服务器发起Head 请求判断资源是否发生过修改。
-如果不存在，那么需要向服务器发起 GET 请求
-	以上不同情况服务器响应的状态码是不同的，如果是存在缓存但缓存过期了，而服务器资源没有修改过，那么服务器返回 304，如果没有缓存或者资源已经修改，那么服务器返回 200
+> ####  1、浏览器输入 www.baidu.com
 
-3、DNS 解析
-DNS 协议是应用层的
 
-由于访问的是域名，那么需要进行进行域名解析，先按照浏览器缓存、操作系统缓存、hosts 文件的顺序进行访问，如果不存在，那么向本地 DNS 服务器发起 DNS 解析请求：
-1）本地 DNS 服务器收到请求后，查看自己的缓存，如果有酒返回，没有那么向根域名服务器（.）发起 DNS 请求
-2）根域名服务器不负责域名解析，它管理所有的顶级域名服务器，收到请求后，会将管理该域名的顶级域名服务器（.com）的 ip 地址发送给本地 DNS 服务器
-3）本地 DNS 服务器拿到顶级域名服务器（.com）的 ip 地址，向它发起 DNS 请求
-4）顶级域名服务器（.com）管理所有 .com 所有子域名的权威域名服务器，它会将管理该域名的权威域名服务器（baidu.com）发送给本地 DNS 服务器
-5）本地 DNS 服务器拿到权威域名服务器（baidu.com）的 ip 地址，向它发起 DNS 请求
-6）权威域名服务器（baidu.com）管理 baidu.com 所有子域名的 ip 地址，它会将 www.baidu.com 的 ip 地址返回给本地 DNS 服务器
-7）本地 DNS 服务器将 ip 地址存储起来，同时返回给浏览器，完成 DNS 解析
 
-DNS 解析涉及到递归和迭代两种方式
+> ####  2、判断缓存
 
-DNS 默认情况下是使用 UDP，因为如果使用 TCP 的话每次请求都需要三次握手 + 四次挥手，这样的话需要 3.5 个 RTT，物理距离越长耗费的时间越长，效率低。
-不过 DNS 的 UDP 限制最大为 512B，如果超过 512B 就不能使用 UDP
-在区域传送以及 DNS 报文长度超过 512B 的时候使用 TCP（DNS 好像为了防止伪造 DNS 域名服务器的应答，跟 HTTPS 一样有个证书链，加上证书链的 DNS 超过几千字节）
+首先获取浏览器缓存，判断是否有 URL 请求的资源
+如果存在，那么根据 expires 和 cache-control 判断缓存是否过期，如果没过期，那么继续使用，如果已经过期，那么携带 If-Modified-Since 请求头字段，向服务器发送请求，服务器收到请求后，对比  If-Modified-Since 的时间以及资源更新的最新时间，如果最新时间较新，表示资源发生修改，那么响应最新资源以及 200 状态码，如果资源没有发生修改，那么响应 3.4
+如果缓存不存在，那么需要向服务器发起 GET 请求，服务器响应资源以及 200 状态码
 
-4、ARP 解析
-ARP 协议是网络层的
-如果 DNS 解析获取 IP 地址后，没有对应的 MAC 地址，那么需要进行 ARP 解析
 
-5、TCP 三次握手 / SSL 四次握手
+
+**Last-Modified 和  If-Modified-Since 的作用和关系：**
+
+服务器在响应结果的时候会返回一个 Last-Modified 字段，表示资源最新修改的时间，当浏览器发现缓存过期并且存在 Last-Modified 字段时，那么浏览器会将 Last-Modified 的值作为 If-Modified-Since 字段值，然后将 If-Modified-Since 字段发送给服务器，让服务器进行资源是否更新的判断
+
+
+
+> #### 3、DNS 解析
+
+**DNS 协议是应用层的**
+
+DNS 解析是通过域名得到 IP 地址
+
+
+
+域名 `www.baidu.com`  的域名全称是 `www.baidu.com. `，域名最后有一个 `.  `  表示根域名，因为所有域名都存在根域名，所以平时都省略了根域名
+
+域名分层：
+
+1）顶级域名：com
+
+2）权威域名：baidu.com
+
+
+
+请求访问的是域名，需要进行域名解析得到 IP 地址，浏览器会先按照**浏览器缓存、操作系统缓存、hosts 文件**的顺序尝试获取 IP 地址，都没有那么向本地 DNS 服务器发起 DNS 解析请求：
+1）本地 DNS 服务器收到请求后，查看自己的缓存，如果有就返回，没有那么向根域名服务器（.）发起 DNS 请求
+2）根域名服务器不负责域名解析，它维护所有顶级域名服务器的 ip 地址，它会将 `com` 顶级域名服务器的 ip 地址发送给本地 DNS 服务器
+3）本地 DNS 服务器拿到 `com`顶级域名服务器的 ip 地址，向它发起 DNS 请求
+4）`com`顶级域名服务器维护 `com` 所有子域名的权威域名服务器的 ip 地址，它会将 `baidu.com` 权威域名服务器的 ip 地址发送给本地 DNS 服务器
+5）本地 DNS 服务器拿到 `baidu.com` 权威域名服务器的 ip 地址，向它发起 DNS 请求
+6）`baidu.com` 权威域名服务器维护 `baidu.com` 所有子域名的 ip 地址，它会将 `www.baidu.com` 的 ip 地址返回给本地 DNS 服务器
+7）本地 DNS 服务器将 ip 地址存储到缓存，同时返回给浏览器，完成 DNS 解析
+
+
+
+DNS 解析涉及到**递归和迭代**两种方式
+
+
+
+**DNS 默认情况下是使用 UDP**，因为如果使用 TCP 的话每次请求都需要三次握手 + 四次挥手，这样的话需要 3.5 个 RTT，物理距离越长耗费的时间越长，效率低。
+
+
+
+DNS 使用 TCP 的情况：
+
+1、DNS 的 UDP 限制最大为 512B，如果超过 512B 需要使用 TCP
+2、区域传送（从 DNS 服务器 复制 主 DNS 服务器的数据，为了保证数据的可靠性，需要使用 TCP1）
+
+（DNS 好像为了防止伪造 DNS 域名服务器的应答，跟 HTTPS 一样有个证书链，加上证书链的 DNS 超过几千字节）
+
+
+
+> ####  4、ARP 解析
+
+ARP 协议：使用 IP 地址到 MAC 地址的映射
+
+**ARP 协议是网络层的**
+
+DNS 解析获取 IP 地址后，如果没有对应的 MAC 地址，那么需要 ARP 解析
+
+
+
+**交换机和路由器：**
+同个网段的不同主机连接的是交换机（**同个网段可能存在多个交换机，这些交换机相互连接**），通过交换机来进行通信，而交换机是二层网络（数据链路层），只识别 MAC 地址。
+交换机连接的是同个网段的主机，**不同网段的主机间的通信只能通过网关进行路由**，路由器找到目的主机所在的网段，然后交给该网段的交换机，转发给目的主机。即**交换机是用来通信，路由器是用来寻路的**。
+路由器（网关）本身存在多个接口，连接了多个网段，因此可以说**路由器是多个网段的，可以跟不同网段的主机进行通信**
+
+我们需要记住，**在路由转发的过程中，会改变的只有目的 MAC、源 MAC，而 源 IP 和 目的 IP 是不会发生改变的**，比如主机 A 和 主机 B 路径上存在 3 个路由器，路由器1、路由器2、路由器3，那么在路由转发的过程中，有以下传输过程：
+
+1）、路由器1 传输给路由器2 时，数据链路层消息内容如下：源 IP（主机 A）、目的 IP（主机 B）、源 MAC（路由器1）、目的 MAC（路由器2）
+
+2）、路由器2 传输给路由器3 时，数据链路层消息内容如下：源 IP（主机 A）、目的 IP（主机 B）、源 MAC（路由器2）、目的 MAC（路由器3）
+
+简单讲：**IP 地址用来确定目的路径，MAC 用来在路径上不断进行中转**
+	（IP 比如我到医院，而 MAC 这段路径不断转换的路程，比如广州南->车陂南，车陂南->杨箕，杨箕->农讲所，最终步行到达目的地）
+**路由器进行下一跳的数据传输也是需要经过数据链路层到达下一个路由器的，所以需要 MAC 地址，一般情况下（非 wifi）数据不是凭空在空气中直接传输的，是通过物理层传输的**。
+
+
+
+**同网段 ARP 解析过程：**
+    1）主机 A 将 自己的 IP 和 目的 IP 都跟子网掩码进行**按位与**操作，得到的结果相同，在同个网段，那么将 源 IP（主机 A）、目的 IP（主机 B）、源 MAC（主机 A） 封装为 ARP 请求报文（目的 MAC 全是 0），调用数据链路层接口
+    2）添加 MAC 头部，封装为数据帧，MAC 报文头部中  源 MAC （主机 A），目的 MAC（全 F，表示广播地址），发送到数据链路层设备（交换机
+
+```
+一个数据帧分为两部分：MAC 头部 和 ARP 请求报文。
+MAC 头部包含源 MAC 和 目的 MAC，ARP 请求报文也包含源 MAC 和 目的 MAC。
+
+MAC 头部的目的 MAC 是全 F，用于 ARP 广播
+ARP 请求报文的目的 MAC 是全 0
+```
+
+​    3）交换机收到数据帧后，由于 MAC 头部的 目的 MAC 全是 F，是广播地址，所以交换机会进行广播
+
+```
+一般情况下，交换机收到数据帧后，查找自己的 MAC 表，如果匹配了 MAC 表，那么根据对应的端口发送出去，如果没有匹配，那么进行广播
+```
+
+​    4）其他主机收到 ARP 包后，如果上面的 IP 地址不是自己，那么舍弃；如果是自己，那么将主机 A 的 IP 和 MAC 进行映射缓存到 ARP 表中，再将 源 IP（主机 B）、目的 IP（主机 A）、源 MAC（主机 B）、目的 MAC（主机 A）封装为 ARP 响应报文，通过交换机单播给主机 A
+​    5）主机 A 收到后，将 MAC 地址缓存起来，完成 ARP 解析
+
+
+
+**跨网段 ARP 解析（ARP 代理）：**
+    由于路由器会隔绝两个不同网段之间的广播，所以如果主机 A 和 主机 B 不在同一个网段，那么主机 A 是收不到主机 B 的 ARP 响应报文的。
+    1）所以主机 A 需要跟主机 B 通信，但是却不知道主机 B 的 MAC 地址时，主机 A 通过子网掩码发现主机 B 的 IP 不在同个网段中，那么就需要通过网关（路由器）来发送，如果主机 A 只知道网关 G 的 IP 地址（我们网络配置的默认网关 IP），那么需要进行一次同网段的 ARP 解析（ARP 请求报文中目的 IP 为网关 G 的 IP），然后获取到网关 G 的 MAC 地址，主机 A 缓存网关 G 的 MAC 地址。
+    2）此时的 ARP 解析实际上已经完成了。
+
+
+
+这里讲下跨网段情况下主机 A 缓存了网关 A 的 MAC 地址后，如何跟主机 B 进行通信：
+    1）主机 A 发送给主机 B 的消息是通过交换机先发送网关 A 的，此时消息信息为 源 IP（主机 A）、目的 IP（主机 B）、源 MAC（主机 A）、目的 MAC（网关 A）
+    2）网关 A 收到消息后，如果网关 A 和 主机 B 在同个网段（上面也说了路由器是多网段的），那么一次同网段 ARP 解析获取主机 B 的地址，然后网关 A 再将消息发送给数据链路层（交换机）发送给主机 B
+    3）如果 网关 A 和 主机 B 不在同个网段，中间需要经过多个路由器，那么网关会根据 目的 IP 找到下一跳的网关 B 地址，如果不存在网关 B 的 MAC，那么进行一次 ARP 解析，获取网关 B 的 MAC 地址，然后交给数据链路层，数据链路层封装的数据帧头部为 源 MAC（网关 A）、目的 MAC（网关 B），然后通过交换机发送给网关 B。网关 B 收到后，按照同样的方法，直接路由转发到主机 B
+    4）主机 B 收到消息后，如果要给主机 A 发送消息，那么也是按照这种方法往回发
+
+
+
+> #### 5、TCP 三次握手 / SSL 四次握手
+
 在没有指定 http/https 协议的情况下，浏览器默认会访问 http 协议
 www.baidu.com 如果是 https 协议，服务器会同时监听 https 和 http 的 80 端口
 访问过程如下：
-1）以 HTTP 协议的方式建立 TCP 三次握手，然后发送 HTTP 请求
-2）服务器收到后，响应 302 状态码（临时重定向），让浏览器以 https 的方式访问
-3）浏览器以 HTTPS 协议的方式建立 TCP 三次握手 + SSL 四次挥手，发送 HTTP 请求
-    
+1）以 HTTP 的方式建立 TCP 三次握手，然后发送 HTTP 请求
+2）服务器收到后，响应 302 状态码（临时重定向），让浏览器以 HTTPS 的方式访问
+3）浏览器以 HTTPS 协议建立 TCP 三次握手 + SSL 四次挥手，再发送 HTTP 请求
 
-6、服务器响应请求，返回 HTML 资源
+​    
+
+> #### 6、服务器响应请求，返回资源
 
 
-7、判断缓存
-浏览器接收服务器响应，如果是 2 中存在缓存但是缓存过期了而发起的请求，那么如果资源未改变，服务器响应 304，那么浏览器继续使用原来的缓存
-如果是不存在缓存而发起的请求，那么这里判断是否能够进行缓存，如果可以那么进行缓存。
 
-8、html 解析、渲染
+> #### 7、判断是否缓存资源以及缓存资源是否改变
+
+浏览器接收服务器响应
+
+如果是缓存过期发起的请求，如果服务器响应 304，那么资源未改变，浏览器继续使用原来的缓存，否则更新缓存
+如果是不存在缓存而发起的请求，那么根据响应头的 cache-control 判断是否缓存资源
+
+
+
+> #### 8、html 解析、渲染
+
 进行 html 的解析，在 html 中可能会需要一些 js、css、图片等
 如果是 HTTP 1.1，那么需要将重新发起多个请求来一一获取这些资源
-如果是 HTTP 2.0，如果开启了服务推送功能（服务器推送是 HTTP 2.0 唯一一个需要手动配置的），那么服务器会进行推送，无需再次发起请求
-```
+如果是 HTTP 2.0，如果开启了服务推送功能，那么服务器会进行推送，无需再次发起请求（**服务器推送是 HTTP 2.0 唯一一个需要手动配置的**）
 
 
 
