添加协程和线程的区别

--- a/A 知识点总结/操作系统.md
+++ b/A 知识点总结/操作系统.md
@@ -463,17 +463,15 @@ Linux 的进程上下文切换和线程上下文切换：
 
 
 
+## 14、进程、线程、协程
 
+Linux 中只有进程，线程是轻量级的进程，这个轻量级进程是在进程的内部的，一个进程内部可以存在多个轻量级进程
 
-## 14、Linux 创建进程的大概过程
+我们这里理解线程为 OS 线程，它是内核态线程，像 Java 1:1 模型每 new Thread() 都会创建一个 OS 线程，它不存在用户态线程
 
-```java
-首先，上面也说了，Linxu 的线程实际上是一个轻量级进程，使用的是进程的数据结构，CPU 调度的也是以这个轻量级进程为基本单位的，因为，我们一个 Java 进程部署在 Linux 上执行时，每个线程对应的是 Linux 的一个轻量级进程
-我把这个这个 Java 进程称作大进程，把内部线程对应的线程称作小进程，平时讲的 PCB 结构实际上是小进程持有的，每个小进程都有一个 PID。
-跟 Java 进程内部必定存在一个线程一样，一个 Linux 进程创建出来的时候必定存在一个大进程和一个小进程，CPU 调度的就是这个小进程
+而 golang 使用的是 M:N 模型，每使用关键字 go 都会创建一个协程，但不一定会创建一个 OS 线程，因为一个 OS 线程可以对应多个 goroutine。
 
-Linux 创建进程的过程：
-1）先创建大进程，分配虚拟地址、堆等共享资源
-2）再创建小进程，给它分配 PCB（内含内核栈和用户栈、进程的优先级、进程的状态等），这个小进程能够访问大进程的资源。
-```
+​	goroutine 是用户态的，在用户态实现 goroutine 的调度
+
+**一个进程内部有多个线程，一个线程可以对应多个协程**
 
