修改知识点

--- a/A 知识点总结/操作系统.md
+++ b/A 知识点总结/操作系统.md
@@ -56,32 +56,15 @@ DMA：外设（网卡、磁盘）不通过 CPU 直接跟内存进行交换数据
 
 
 
-## 3、OS 进程（线程） 和 Java 线程 的状态转换
+## 3、OS 线程（轻量级进程）五种状态转换
 
-```java
-1、OS 进程（线程）的五种状态
+
+
 1）初始化：进程刚创建，正在分配资源
 2）运行状态：进程正在被 CPU 调度
 3）就绪状态：进程等待被 CPU 调度
 4）阻塞状态：进程遇到 IO 事件、信号量 P 操作等待获取资源等阻塞操作，等待阻塞事件完成后会进入到就绪状态
 5）终止状态：进程正常执行完毕退出 或者 异常终止 或者 被 kill 指令强制终止
-
-2、Java 线程的六种状态
-1）NEW：线程刚创建，还没有调用 start()
-2）RUNNABLE：线程调用了 start()，正在被 CPU 调度或者等待被 CPU 调度
-3）WAITING：无限期的等待，比如 wait()、join()、park() 等函数
-4）TIMED_WAITING：超时等待，比如 wait(1000)、sleep(1000)、join(1000)、parkNanos()，这种都是限时等待，超过时间后会自动唤醒，不过如果 wait(1000) 醒来后仍然会进入到 EntryList 队列中等待获取锁，其他的情况则是进入到 RUNNABLE 状态，等待 CPU 调度
-5）BLOCKED：Java 线程只有在获取 sync 锁才会陷入阻塞状态（即使是 IO 事件也是处于 RUNNABLE）
-6）TEMPRXXX：线程正常退出或者异常退出。
-    
-
-线程让出 CPU 的函数：
-1）wait()
-2）sleep()
-3）join()
-4）park()
-5）yield()：注意 yield 的线程是可能再次抢到 CPU 的，基本不会使用该方法
-```
 
 
 
@@ -299,23 +282,11 @@ DMA：外设（网卡、磁盘）不通过 CPU 直接跟内存进行交换数据
 [关于进程的4GB虚拟地址空间概念的理解](https://blog.csdn.net/sjtu_huang/article/details/6037556?utm_source=blogxgwz3)
 
 ```java
-1、为什么需要虚拟地址？
-如果没有虚拟地址，那么进程就是直接访问到物理内存，那么会产生以下问题：
-1）地址空间不隔离：没有虚拟内存，进程都是能够直接访问物理内存的，而且进程之间可以访问相同的物理内存，这就导致可能存在恶意软件恶意篡改别的进程的数据，同时也可能是由于代码问题导致的非恶意的越界访问修改
-2）程序的运行地址不稳定：进程的运行地址是不稳定的，每次运行的时候，哪里有足够的内存空间就将该内存分配给该进程，而当强制要访问某个地址空间时，会由于地址空间不隔离而访问到别的进程的数据
-3）产生内存碎片：早期的操作系统，换入换出物理内存都是必须整个进程，同时它们运行也必须在连续的物理内存上，这样的话，假设 A、B、C 分别需要占用 10M、25M、30M，物理内存为 50M，那么当运行了 A 和 B 的时候，它们分别占据了 35M 内存，剩下的 15M 内存无法容纳整个 C 进程，所以无法有效利用，产生内存碎片。
-
-为了解决上面的问题，操作系统在进程和物理内存之间添加了一层抽象层：虚拟地址。
-通过 MMU 实现虚拟地址和物理地址的映射，每个进程直接访问的是虚拟地址，然后 CPU 再访问虚拟地址映射的物理地址上的数据。
-1）实现地址空间隔离：每个进程分配到的虚拟地址都是一样的，都是从 0 开始计算的，它们能够直接访问的就是自己分配到的虚拟地址，然后借助 MMU 访问虚拟地址映射的物理地址，因此，只要操作系统没有将不同进程的虚拟页映射到相同的物理地址上，那么就相当于地址空间隔离了，因为进程无论怎么访问都不可能访问到别的进程空间。
-2）解决内存碎片：比如分页机制，将虚拟地址 和 物理内存 分为大小相同的页通过 MMU 进行映射，所以它们不需要连续的内存，只要对进程来说它的虚拟地址是连续的就行了，底层映射的物理内存页面不需要连续。
-
-2、为什么需要虚拟内存？
-32位的操作系统下每个进程都自认为能够占用 4GB 内存，主内存一直分配，而当没有内存可以分配时，那么这时候就需要将某个进程中的某个页面替换下来
-操作系统根据 页面淘汰策略（OPT、FIFO、LRU、LFU）对进程的虚拟页进行淘汰，淘汰的页面对应的物理页数据会存储在虚拟内存中（Linux 中的 swap 空间），然后将该进程的虚拟页跟物理页断开映射关系，然后将新进程的虚拟页跟该物理页建立映射关系，将数据存储在物理页中。
-当进程访问的虚拟页上没有映射物理地址时，会产生缺页异常，此时会从虚拟内存中将该页的数据加载到物理内存中，同时将虚拟页和物理页建立映射关系。
-因此，进程的数据实际上存储在 虚拟内存（磁盘）+ 物理内存 两个地方
-虚拟内存和虚拟地址的配合使用能够让进程感觉自己占有很大的内存空间。
+每个进程都会分配 4GB 大小的虚拟地址，地址都是从 0 开始的，目的是为了让进程感觉自己具有足够大小的连续的内存空间
+但是这并不意味着它们真正具有 4GB 大小的内存可以使用，这里的指代的内存空间是指虚拟内存，它由磁盘和物理内存组成
+磁盘存储的是进程目前不需要执行的部分，物理内存存储的是进程目前正在执行的部分
+    
+由于磁盘的访问效率比物理内存要低得多，所以虚拟内存磁盘设置过大会导致效率降低
 ```
 
 
@@ -460,20 +431,4 @@ Linux 的进程上下文切换和线程上下文切换：
 ```
 
 <img src="https://pic.leetcode-cn.com/1609559719-sgtnAI-image.png" style="zoom:70%;" />
-
-
-
-
-
-## 14、Linux 创建进程的大概过程
-
-```java
-首先，上面也说了，Linxu 的线程实际上是一个轻量级进程，使用的是进程的数据结构，CPU 调度的也是以这个轻量级进程为基本单位的，因为，我们一个 Java 进程部署在 Linux 上执行时，每个线程对应的是 Linux 的一个轻量级进程
-我把这个这个 Java 进程称作大进程，把内部线程对应的线程称作小进程，平时讲的 PCB 结构实际上是小进程持有的，每个小进程都有一个 PID。
-跟 Java 进程内部必定存在一个线程一样，一个 Linux 进程创建出来的时候必定存在一个大进程和一个小进程，CPU 调度的就是这个小进程
-
-Linux 创建进程的过程：
-1）先创建大进程，分配虚拟地址、堆等共享资源
-2）再创建小进程，给它分配 PCB（内含内核栈和用户栈、进程的优先级、进程的状态等），这个小进程能够访问大进程的资源。
-```
 
