--- a/操作系统/1、操作系统 进程系列（一）进程和线程的基础.md
+++ b/操作系统/1、操作系统 进程系列（一）进程和线程的基础.md
@@ -199,7 +199,7 @@ grep Z 是正则表达式匹配 Z
 
 ## 6、进程 5 种装态转换
 
-**进程状态：【新建、运行、就绪、阻塞、终止】**
+**进程状态：【新建、就绪、运行、阻塞、终止】**
 
 新建状态：进程正在创建过程中，为进程分配资源，还不能被 CPU 进行调度
 
@@ -292,7 +292,6 @@ tryLock(1000) 是有限期的挂起，调用的是 parkNanos()，那么就是 TI
 
 
  ![img](https://greenhathg.github.io/2019/08/04/Java%E7%BA%BF%E7%A8%8B%E7%9A%84%E7%8A%B6%E6%80%81/3.jpeg) 
-
 
 
 
