--- a/操作系统/3、操作系统 进程系列（三）内存管理.md
+++ b/操作系统/3、操作系统 进程系列（三）内存管理.md
@@ -56,6 +56,10 @@
 
 
 
+“虚拟内存一般是指在电脑内存不足的情况下，由系统自动调用硬盘空间，用于暂时替代不足的内存工作。但由于虚拟内存使用的是硬盘空间，读写数据的速度是远低于内存的，所以虚拟内存设置过高会影响电脑的速度。”
+
+
+
 > #### 虚拟内存的限制
 
 虚拟内存作为物理内存的扩充，多进程分配的内存实际上可能远远大于实际可用的物理内存，因此需要使用虚拟内存来代替物理内存，而分配给进程的是虚页，即虚拟地址，这些虚拟地址可以映射到物理内存上，也可以映射到虚拟内存上（磁盘）
