--- a/操作系统/4、操作系统 进程系列（四）死锁.md
+++ b/操作系统/4、操作系统 进程系列（四）死锁.md
@@ -13,8 +13,8 @@
 官方点讲，四个必要条件就是
 
 - 互斥条件：一个资源一次只能被一个 进程/线程 占有
-- 永久保持：线程在遇到阻塞的时候不会去释放自己的资源，这样无限阻塞就一直不释放
-- 不剥夺：线程在没有执行到释放锁的逻辑的时候是不会主动释放锁的
+- 请求时保持：线程因请求资源而阻塞时，对已获得的资源保持不放；
+- 不剥夺：线程获取的资源在使用完成前不能被强行剥夺
 - 环路等待：多个线程间请求的资源和持有的资源形成一个环路，即死循环 
 
 
@@ -31,8 +31,8 @@
 预防死锁的三个方法：
 
 - 统一获取锁的顺序（破坏环路等待）
-- 在获取另一个锁的前如果持有一个锁，如果持有的锁是不需要的，那么在获取另一个锁前释放掉（破坏环路等待）
-- 限时阻塞获取锁：tryLock()（对应破坏永久保持）
+- 在获取另一个锁前如果持有一个锁，如果持有的锁是不需要的，那么在获取另一个锁前释放掉（破坏请求时保持）
+- 限时阻塞获取锁：tryLock()（破坏环路等待）
 
 
 
