--- a/A 知识点总结/计网.md
+++ b/A 知识点总结/计网.md
@@ -86,6 +86,7 @@ HTTP 1.0 的缺点：
 1）长连接：添加了长连接的连接方式，默认使用长连接，当一个 HTTP 请求和响应完成后，不会立马断开连接。 
 2）管道：添加管道，一个 TCP 连接能够同时发送多个 HTTP 请求（管道是基于长连接的）
 3）断点续传：跟 206 状态码配合使用
+4）分块传输 Chunk
 
 HTTP 1.1 的缺点：
 随着基于长连接的管道，存在 HTTP 队头阻塞的问题（短连接没有这个问题，长连接才有）：能够同时发送多个 HTTP 请求，但是必须按照顺序进行响应
@@ -392,63 +393,53 @@ TIME_WAIT 为什么是 2MSL？
 
 ## 7、TCP 综合问题
 
-```java
-1、SYN flood 攻击（SYN 泛洪攻击）
-该攻击是针对 TCP 三次握手的
-TCP 存在两个队列：SYN 队列（半连接队列）和 Accept 队列（全连接队列），它们的空间大小是有限的
+> #### 1、客户端连续三次 write()，服务端分别可能需要调用多少次 read()
 
-两个队列的使用场景：
-1）客户端发起 SYN 连接，服务器响应 SYN + ACK，然后将这个 TCP 连接存储到 SYN 队列中
-2）客户端响应 ACK，服务器接收到后，将 TCP 连接从 SYN 队列中移除，存储到 Accept 队列，等待 accept() 调用
-
-而 SYN flood 攻击就是黑客不断伪造 ip，发起 SYN 连接，致使服务器不断将 TCP 连接存储到 SYN 队列中，导致其他的用户的正常连接由于 SYN 队列满了而被舍弃，无法得到正常响应
-
-解决方法：SYN cookie：
-当 SYN 队列满了的时候，对于其他 SYN 连接不直接舍弃，而是通过 SYN cookie 的方式来解决：
-    1）在服务器响应 SYN + ACK 的时候，需要初始化一个随机数作为初始序列号，而这里是将 客户端 ip、端口、服务器 ip、端口 以及其他的安全信息进行 hash 计算得到一个 hash 值，然后将这个 hash 值代替随机数作为初始序列号，这个 hash 值就叫做 SYN cookie
-    2）客户端响应 ACK 时，服务器将 ACK 报文中的 ACK number - 1，然后将相同的信息经过相同的 hash 算法，将两个 hash 值进行比较，如果一致那么表示连接成功，将该 TCP 连接存储到 Accept 队列中
-    3）如果短时间内收到重复 IP 的 SYN 连接，那么认定为攻击，以后这个 IP 地址的包都会被舍弃（不过真正的攻击都是变换 IP 的）
-
-不直接舍弃 SYN 队列而全部采用 SYN cookie 的原因：
-计算和验证 SYN cookie 需要 CPU 进行大量计算，如果在高并发的情况下，那么会占用很多的 CPU 资源
-
-    当出现 SYN 攻击时，可以通过 netstat 命令的 netstat -anp | grep SYN_RECV 查询处于 SYN_RECV 状态的 TCP 连接
-    
+```
+理想状态下，不丢包，服务端都能够进行接收处理，那么服务端只需要调用一次 read()
+丢包情况：
+	1）、丢了一个包，重发这个包，这个包正常到达，那么服务端第一次 read() 读取两个包的数据，第二次 read() 读取丢包的数据
+	2）、丢了两个包，重发这两个包，两个包正常到达，那么服务端第一次 read() 读取两个包的数据，第二次 read() 读取丢包的数据
+	3）、丢了两个包，重发这两个包，一个包正常到达，另一个包再次丢失，再次重发，正常到达，那么服务端第一次 read() 读取两个包的数据，第二次 read() 读取第一次重发的数据，第三次 read() 读取第二次重发的数据
+```
 
 
-2、糊涂窗口综合征
-如果接收方的 rwnd 一直都很小，那么发送方每次都只能发送小数据包，而一个 IP 报文 + TCP 报文 至少占用 40B，如果数据只有 1B 的话，那么这个数据包的性价比显然是很低的，占据网络带宽 41 B，而真正有意义的只有 1B，这种叫做糊涂窗口综合征
 
-为了使得网络中存在太多这种小数据包占据网络带宽，TCP 默认开启了 Nagle 算法：
-只有满足以下几种情况之一才会发送数据：
-    1）发送缓冲区的数据达到 MSS
-    2）发送缓冲区存在 FIN 标志位
-    3）超过一定的时间
+> #### 2、客户端发送问题
+
+MTU = 1000byte
+
+客户端调用两次 write()，每次写入 600 byte，那么客户端会发送多少次，每次数据为多少？
+
+```
+在服务端可处理的情况下，客户端第一次发送的数据为 1000byte，第二次发送的数据为 200byte
+```
+
+第一次发送后第二次发送是立刻发送还是会等一会才发送？
+
+```
+根据 TCP 参数配置，默认情况下是会等一会才发送的，因为剩下的 200byte 属于小包，TCP 为了避免频繁的小包发送开启了 Nagle 算法，只有等待超时或者包数据到达一定量或者包存在FIN标识符等才会发送处理
+如果我们关闭了 Nagle 算法，并且服务端可处理的情况下，包会立马发送
+```
 
 
-    
-    
-3、粘包、拆包
-粘包表示属于不同包的数据合并在一个包一起发送，比如 A 数据 10 bytes, B 数据 20 bytes，两个数据在接收方的缓冲区中黏在一起了
-拆包表示属于一个包的数据被拆成多个包，并且跟其他的包发生粘包
 
-只有 TCP 才会发生粘包，UDP 不会发生粘包
-因为 TCP 是字节流，数据之间没有明显的界限，所以接收方在处理数据的时候会很难办，因为不知道哪里是两个不同的数据
+> #### 3、SYN 队列满了，那么接收方会怎么做？
 
-可能发生粘包、拆包的情况：
-1）接收方没有及时处理数据，导致多个数据堆积
-2）发送方开启了 Nagle 算法，导致多个不同的小数据黏在一起发送
-3）应用层要发送的一个数据太大，超过 MSS，需要拆包发送，而拆分后后半部分数据跟别的数据黏在一起
+```
+默认情况下，如果没有开启 SYN cookie，那么接收方会直接丢弃连接，什么都不回复，发送方在没有收到 SYN + ACK 时会继续重发一定的次数，如果重发次数这段期间 SYN 队列空出来了，那么会将该连接入队
 
-粘包、拆包解决：
-1）TCP 报文头部添加报文长度（这是需要修改协议了）
-2）双方规定数据的固定长度
-3）在数据的末尾添加一个结束标识符
-4）关闭 Nagle 算法
-5）约定先发个数据长度，数据长度添加一个结束标识符，防止粘包，然后根据长度进行数据读取（其实就是前面一种的结合）
-    
+可以配置接收方回复 RST，但是需要注意的是回复 RST 是让发送方终止连接，那么发送方就不会再重发 SYN 了，那么 SYN 队列如果空出来了也没有机会建立连接
+```
 
-这里讲个后话：很多人包括我上面都是说 粘包、拆包，实际上对于 TCP 协议来说没有什么包的概率，只有流的概念，它是将属于一个数据的字节数据称作一个包，这在 TCP 协议显然是错误的。
+
+
+> #### 4、Accept 队列满了，那么接收方会怎么做？
+
+```
+默认情况下，接收方会忽略掉第三次握手发送方的 ACK，然后重发 SYN+ACK，重试直到发送方超时，如果这段期间 Accept 队列空出来了，那么会将该连接入队
+
+可以配置接收方回复 RST，但是需要注意的是回复 RST 是让发送方终止连接，那么 Accept 队列如果空出来了也没有机会建立连接
 ```
 
 
